--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>Bank Account</title>
+  <title>🏦 The React-Redux Bank ⚛️</title>
 
 </head>
 
